fixed grid gap

--- a/css/style.css
+++ b/css/style.css
@@ -486,7 +486,7 @@ body {
 
 .grid-container {
   display: grid;
-  gap: 1.875rem 1.5rem;
+  gap: 1.5rem 1.875rem;
   margin: 4.4375rem 1.5rem;
   max-width: 69.375rem;
 }
