--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -3,7 +3,7 @@
 
 .grid-container{
     display: grid;
-    gap: toRem(30) toRem(24);
+    gap: toRem(24) toRem(30);
     margin: toRem(71) toRem(24);
     max-width: toRem(1110);
 
